# excel-to-csv

./: .env.sample  .gitignore  FOR_USERS.md  README.md  doc-20250115.md  index.html  package-lock.json  package.json
.github/workflows/: main.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/public/: prompt.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/documents/: docx.rs  mod.rs  request.rs  scan.rs
src/components/: drug.tsx  get_string.tsx
