[package]
name = "excel-to-csv"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "excel_to_csv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.26", features = ["derive"] }
ignore = "0.4.23"
quick-xml = "0.22"
zip = "2.2.2"
tokio = { version = "0.2.0-alpha.6", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
walkdir = "2.5.0"
chrono = "0.4.38"
tauri = { version = "2.2.1", features = [] }
tauri-plugin-opener = "2.2.3"
dirs = "6.0.0"
base64 = "0.22.1"
calamine = "0.26.1"
